@@ -109,6 +109,7 @@ qc pass: secondary addresses over ethernet
 qc pass: secondary addresses over dot1q vlan
 qc pass: monitor session over tunnel
 qc pass: monitor session over pwhe
+qc pass: verify source with ethernet encapsulation
 qc pass: etherip over ipv4
 qc pass: etherip over ipv6
 qc pass: etherip over loopback
@@ -845,6 +846,7 @@ qc pass: interop1: point2point ethernet encapsulation
 qc pass: interop1: lacp
 qc pass: interop1: fragmentation and reassembly
 qc pass: interop1: sgt encapsulation
+qc pass: interop1: verify source
 qc pass: interop1: ike1 with ipv4
 qc pass: interop1: ike1 with ipv6
 qc pass: interop1: ike1 with 3des
@@ -966,6 +968,7 @@ qc pass: interop2: dot1ad encapsulation
 qc pass: interop2: point2point ethernet encapsulation
 qc pass: interop2: lacp
 qc pass: interop2: fragmentation and reassembly
+qc pass: interop2: verify source
 qc pass: interop2: point2point isis
 qc pass: interop2: isis dis
 qc pass: interop2: isis nondis
@@ -1029,6 +1032,7 @@ qc pass: interop8: bgp large community
 qc pass: interop8: bgp with php labels
 qc pass: interop8: eigrp
 qc pass: interop8: fragmentation and reassembly
+qc pass: interop8: verify source
 qc pass: interop8: point2point isis
 qc pass: interop8: isis dis
 qc pass: interop8: isis nondis
@@ -1072,6 +1076,7 @@ qc pass: interop9: bgp with php labels
 qc pass: interop9: ethernet encapsulation
 qc pass: interop9: dot1q encapsulation
 qc pass: interop9: fragmentation and reassembly
+qc pass: interop9: verify source
 qc pass: interop9: point2point isis
 qc pass: interop9: isis dis
 qc pass: interop9: isis nondis
@@ -2729,6 +2734,7 @@ qc pass: static routing with prefix tracker
 qc pass: static routing with other tracker
 qc pass: static routing with check tracker
 qc pass: static routing with nrpe tracker
+qc pass: verify source with static routing
 qc pass: static bmp peer
 qc pass: dynamic bmp peer
 qc pass: authoritative dns server
